--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <title>Task Manager</title>
 </head>
 <body>
     <header>
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper light-blue darken-1">
               <a href="#!" class="brand-logo">Task Manager</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="{{ url_for('add_category') }}">New Task</a></li>
+                <li><a href="{{ url_for('add_task') }}">New Task</a></li>
                 <li><a href="{{ url_for('categories') }}">Categories</a></li>
               </ul>
             </div>
@@ -24,6 +25,8 @@
         <!--mobilenav-->
           <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+            <li><a href="{{ url_for('categories') }}">Categories</a></li>
           </ul>
     </header>
 
@@ -32,7 +35,7 @@
         {% endblock %}
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer light-blue darken-1">
         <div class="footer-copyright">
           <div class="container">
           © 2014 Copyright Text
