--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -23,6 +23,10 @@
             {{ task.category }}
             <p>{{task.task_description}}</p>
         </div>
+        <div class="card-action">
+            <a href="{{ url_for('edit_task', task_id=task.id) }}"class="btn green accent-4">Edit</a>
+            <a href="{{ url_for('delete_task', task_id=task.id) }}"class="btn red">Delete</a>
+          </div>
     </li>
     {% endfor %}
 </ul>
